--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -31,7 +31,7 @@
       "source": [
         "# Assuming our main memory is big enough to hold all weights, inputs, and outputs\n",
         "def load_main_memory(main_memory, input_data, weights_data, mem_write):\n",
-        "# This functions loads the initial weights and inputs to main memory"
+        "# This functions loads the initial weights and inputs to main memory",
         "  k = 0\n",
         "  for i in range(weights_data.size(0)): # Store weights first\n",
         "    main_memory[i] = weights_data[i]\n",
