--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "# How to run: Should be pasted in solution.py and used in main.ipynb\n",
+        "# How to run: Should be copied to solution.py and used in main.ipynb\n",
         "def find_optimal_pruning(model, train_loader, test_loader, device, prune_ratio_dict: Dict, steps):\n",
         "  # This functions helps to find the optimal pruning ratio to futher reduce energy consuption while maintaining above 85% accuracy.\n",
         "    ## Initial Prune ratio\n",
